# SimpleBattle

./: README.md
data/: res.xml  res.xml~
data/res.xml.ox/: meta.xml
proj.cmake/: CMakeLists.txt
src/: Bullet.cpp  Bullet.h  Menu.cpp  Menu.h  app.cpp  app.h  config.cpp  config.h  gun.cpp  gun.h  main.cpp  ship.cpp  ship.h
src/Plot/: Plot.cpp  Plot.h  PlotBet.cpp  PlotBet.h  PlotLine.cpp  PlotLine.h  PlotPoint.cpp  PlotPoint.h  Row.cpp  Row.h
